--- a/rumi/Makefile
+++ b/rumi/Makefile
@@ -1,28 +1,29 @@
-CC      := gcc
+CC      := g++
 BIN     := ./bin
 OBJ     := ./obj
 INCLUDE := ./include
 SRC     := ./src
-SRCS    := $(wildcard $(SRC)/*.c)
-OBJS    := $(patsubst $(SRC)/%.c,$(OBJ)/%.o,$(SRCS))
+SRCS    := $(wildcard $(SRC)/*.cpp)
+OBJS    := $(patsubst $(SRC)/%.cpp,$(OBJ)/%.o,$(SRCS))
 EXE     := $(BIN)/init
-INIT    := ../initramfs/bin/init
+INIT    := ../initramfs/init
 CFLAGS  := -I$(INCLUDE) -static
 LDFLAGS := -static
 
 .PHONY: all run clean
 
 all: $(EXE)
-	mv $(EXE) $(INIT)
+	rm $(INIT)
+	cp $(EXE) $(INIT)
 
 $(EXE): $(OBJS) | $(BIN)
 	$(CC) $(LDFLAGS) $^ -o $@ $(LDLIBS)
 
-$(OBJ)/%.o: $(SRC)/%.c | $(OBJ)
+$(OBJ)/%.o: $(SRC)/%.cpp | $(OBJ)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 $(BIN) $(OBJ):
 	mkdir $@
 
 clean:
-	rm $(OBJ) $(BIN)
+	rm -rf $(OBJ) $(BIN)
